feat() : 모든 table 에 identity stragy 추가 + 외래키 제거